--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-    background-color: blue;
-    color: white;
+    background-color: blanchedalmond;
+    color: black;
 }
 
 h1 {
-    color: white;
+    
     text-align: center;
 }
 
@@ -19,7 +19,7 @@ h1 {
     width: 600px;
     height: 400px;
     padding: 20px;
-    background-color: #00008B;
+    background-color: gray;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 5%;
 }
