--- a/styleBuscarProfissional.css
+++ b/styleBuscarProfissional.css
@@ -1,48 +1,45 @@
-.perfil {
+body {
+    font-family: Arial, sans-serif;
+    background-color: blanchedalmond;
+}
+
+
+.perfil{
     display: flex;
-    justify-content: center;
     align-items: center;
-    background-color: gray;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    border-radius: 5%;
+    max-width: 800px;
+    margin: 10% auto;
     padding: 20px;
-    margin-bottom: 20px;
-    width: 600px;
-    height: auto;
+    background-color: gray;
+    border-radius: 30px;
 }
 
 .perfil img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
+    width: 300px;
+    height: 300px;
     margin-right: 20px;
+    border-radius: 30px;
 }
 
 .informacoes {
-    flex: 1;
+    flex-grow: 1;
 }
 
 .informacoes h2 {
-    text-align: center;
     margin-top: 0;
 }
 
 .informacoes p {
     margin: 5px 0;
-    text-align: center;
+    font-size: 23px;
 }
 
 .avaliacoes {
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .avaliacoes h3 {
-    text-align: center;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
-.avaliacoes p {
-    margin: 5px 0;
-    font-style: italic;
-    text-align: center;
-}
+
