--- a/style.css
+++ b/style.css
@@ -57,12 +57,18 @@ button.btn:hover {
 a {
     display: block;
     text-align: center;
-    margin-top: 40px; 
     color: white;
     text-decoration: none;
     font-size: 16px;
+}
+.a1 {
+    margin-top: 30px;
+}
+.a2{
+    margin-top: 10px;
 }
 
 a:hover {
     color: black;
 }
+
