--- a/styleTrab.css
+++ b/styleTrab.css
@@ -17,6 +17,16 @@ h1 {
 
 .container {
     margin-top: 40px;
+    width: 500px;
+    height: 400px;
+    padding: 20px;
+    background-color: gray;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 5%;
+}
+
+.container2 {
+    margin-top: 40px;
     width: 600px;
     height: 700px;
     padding: 20px;
@@ -46,12 +56,13 @@ textarea{
 button.btn {
     width: 60%;
     padding: 10px;
-    background-color: darkgray;
-    color: white;
+    background-color: rgb(54, 54, 54);
+    color: rgb(255, 255, 255);
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
     margin-top: 30px;
+    font-size: 16px;
 }
 
 button.btn:hover {
@@ -70,3 +81,10 @@ a {
 a:hover {
     color: black;
 }
+
+h1 a {
+    font-size: 40px; 
+    text-decoration: none; 
+    color: rgb(128, 128, 128); 
+}
+
